--- a/ui/index.html
+++ b/ui/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="dg-container"></div>
-    <script src="http://localhost:3000/index.js"></script>
+    <script src="index.min.js"></script>
   </body>
 </html>
